language switcher done

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -13,6 +13,7 @@
     "New Table":"طاولة جديدة",
     "New Category":"فئة جديدة",
     "New Menu":"قائمة طعام جديدة",
-    "New Reservation":"حجز جديد"
+    "New Reservation":"حجز جديد",
+    "Language":"اللغة"
 
 }
