the log out button

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -21,6 +21,7 @@
     "Description Ar":"الوصف بالعربية",
     "Description En":"الوصف بالانجليزية",
     "Category Created Successfully":"تم إنشاء الفئة بنجاح",
-    "Actions":"أجراءات اخرى"
+    "Actions":"أجراءات اخرى",
+    "Log Out":"تسجيل الخروج"
 
 }
